istio/deployservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea
  labels:
    app: servicea
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicea
      version: v1
  template:
    metadata:
      labels:
        app: servicea
        version: v1
    spec:
      containers:
      - name: servicea
        image: sibendu/servicea
        ports:
        - containerPort: 8080
          name: http-port
          protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: servicea
spec:
  ports:
  - name: http-port
    protocol: TCP  
    port: 8080
    targetPort: 8080
  selector:
    app: servicea
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceb
  labels:
    app: serviceb
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serviceb
      version: v1
  template:
    metadata:
      labels:
        app: serviceb
        version: v1
    spec:
      containers:
      - name: serviceb
        image: sibendu/serviceb
        ports:
        - containerPort: 8081
          name: http-port
          protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: serviceb
spec:
  ports:
  - name: http-port
    port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: serviceb
