istio/destrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: servicea
spec:
  host: servicea
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: serviceb
spec:
  host: serviceb
  subsets:
  - name: v1
    labels:
      version: v1
