istio/gateway-https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
spec:
  selector:
    istio: ingress # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: servicea-credential
    hosts:
    - "servicea.example.com"	
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicea
spec:
  hosts:
  - "servicea.example.com"
  gateways:
  - test-gateway
  http:
  - match:
    - uri:
        exact: /api/customer
    route:
    - destination:
        host: servicea
        port:
          number: 8080
